# oxebots-desafio-prossel-2026-vinicius-coutinho

./: .gitignore  CMakeLists.txt  README.md  compilar.bat
simulador/include/: Ball.h  Interfaces.h  Player.h  Simulator.h
simulador/src/: Ball.cpp  Player.cpp  Simulator.cpp  main.cpp
solucao/include/: Estrategia.h  Planejador.h  Vetor.h
solucao/src/: Estrategia.cpp  Planejador.cpp
